lab1/Test/L1-A-6-31.output
Error Type A at Line 1
Error Type A at Line 3
Error Type B at Line 3
Error Type B at Line 7
Error Type B at Line 7
Error Type B at Line 10
Error Type B at Line 12
Error Type B at Line 12
