lab1/Test/L1-A-6-31.cmm
float \fcShd ( ) {
{
    if '( x9KMmo53NnIf1g7xi2 )     if v5MGx4aY0IcoZO 
      )     x6pPuSBuQDPL3 


  }  if ( aCegEBtHD   if ( xcx6 )   kW 


  return mNoezndbRaZCZAuMV ;
}
int / 